# ogre-kg

./: .pre-commit-config.yaml  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
notebooks/: example.ipynb  example_entity_proc_and_retrieval.ipynb  tutorial_falkordb_entity_proc_and_retrieval.ipynb  tutorial_tabular_extractor.ipynb
src/ogre_kg/: __init__.py  utils.py
src/ogre_kg/kg_processors/: __init__.py  entity_disambiguation.py  entity_merger.py  entity_similarity_finders.py  graph_db_utils.py  retrievers.py
src/ogre_kg/kg_processors/entity_processing/: __init__.py  entity_disambiguation.py  entity_merger.py  entity_similarity_finders.py
src/ogre_kg/kg_processors/extractors/: __init__.py  onto_dynamic_llm_path_extractor.py  tabular_path_extractor.py
src/ogre_kg/kg_processors/retrievers/: __init__.py  base_retrievers.py  falkordb_retrievers.py  memgraph_retrievers.py  neo4j_retrievers.py
tests/: conftest.py  test_entity_disambiguation.py  test_entity_merger.py  test_entity_similarity_finders.py  test_extractors.py  test_graph_db_utils.py  test_retrievers.py  test_utils.py
