[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "ogre-kg-private"
version = "0.1.0"
description = "Ontology-Grounded Retrieval & Enrichment for Knowledge Graphs"
readme = "README.md"
requires-python = ">=3.13"
authors = [
    { name = "Filip Wójcik", email = "ds@filip-wojcik.com" },
]
dependencies = [
    "llama-index>=0.14.14",
    "llama-index-embeddings-huggingface>=0.6.1",
    "llama-index-graph-stores-memgraph>=0.4.1",
    "llama-index-llms-openrouter>=0.3.0",
    "llama-index-readers-wikipedia>=0.5.0",
    "pandas>=2.2.3",
    "rapidfuzz>=3.0.0",
    "tqdm>=4.67.3",
    "wikipedia>=1.4.0",
]

[project.optional-dependencies]
neo4j = ["llama-index-graph-stores-neo4j>=0.4.0"]

[dependency-groups]
dev = [
    "mypy>=1.16.1",
    "pre-commit>=4.2.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.1.0",
    "ruff>=0.12.7",
]
research = [
    "autoroot>=1.0.1",
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"

[tool.hatch.build.targets.wheel]
packages = ["src/ogre_kg"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM"]

[tool.ruff.lint.isort]
known-first-party = ["ogre_kg"]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
